# govml-agent-platform-

./: FINDINGS.md  HYPOTHESIS_REGISTRY.md  README.md  environment.yml  project.yaml  pyproject.toml  reproduce.sh
blog/: README.md  conference_abstract.md  draft.md  linkedin_post.md  substack_intro.md
docs/: CLAUDE_MD.md  CONTENT_PLAN.md  DECISION_LOG.md  HYPOTHESIS_REGISTRY.md  IMPLEMENTATION_PLAYBOOK.md  PROJECT_BRIEF.md  PUBLICATION_PIPELINE.md
outputs/provenance/: git_info.txt
scripts/: check_all_gates.sh  check_integrity.py  check_phase_0.sh  check_phase_1.sh  check_phase_2.sh  check_phase_3.sh  check_phase_4.sh  check_rubric.py  generate_figures.py  sweep.sh  verify_manifests.py
src/: mcp_server.py  policy_engine.py
tests/: test_policy_engine.py
